# sysaware-ml-optimizer

./: .dockerignore  .gitignore  .self-eval-scores.jsonl  .sysaware_cache.json  Dockerfile  IMPLEMENTATION_ROADMAP.md  README.md  docker-compose.yml  main.py  patch.py  pyproject.toml  pyrefly.toml  pytest.ini  requirements.txt  server.py  temp_model.pt  test.pt  test.py
.github/workflows/: ci.yml
backend/: main.py  server.py
core/: __init__.py  autodiscovery.py  autotuner.py  benchmark.py  contracts.py  estimator.py  evaluator.py  exporter.py  memoization.py  model_analyzer.py  optimizer.py  prompt_optimizer.py  store.py  strategy_engine.py  system_profiler.py
data/: benchmarks_augmented.csv  benchmarks_augmented_v2.csv  benchmarks_raw.csv  benchmarks_raw_enriched.csv  estimator_invram.joblib  estimator_metadata.joblib  estimator_ramspill.joblib
docs/: DESIGN_SYSTEM.md
frontend/: .fallowrc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
gui/: app.py  helpers.py
scripts/: augment_benchmarks.py  augment_benchmarks_v2.py  train_estimator.py  train_estimator_v2.py
tests/: conftest.py  test_autotuner.py  test_cli_smoke.py  test_contracts.py  test_core_init_exports.py  test_dual_path_api.py  test_estimator.py  test_gui_helpers.py  test_logging_utils.py  test_main_phase0.py  test_model_analyzer.py  test_ollama_endpoints.py  test_optimizer.py  test_prompt_optimizer.py  test_schemas.py  test_security.py  test_sse.py  test_strategy_engine.py  test_system_profiler.py  test_validation.py
(+130 files in other folders)
