[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysaware"
version = "1.0.0"
description = "SysAware ML Optimizer engine, server, and CLI tools"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "psutil>=5.9.0",
    "streamlit>=1.32.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.0",
    "safetensors>=0.4.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "rich>=13.7.0",
    "joblib",
    "pandas",
    "scikit-learn",
    "httpx",
]

[project.scripts]
sysaware = "sysaware.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["sysaware", "sysaware.*"]
